--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <h1>Sigil.tv</h1>
+
+<!-- Add a placeholder for the Twitch embed -->
+<div id="twitch-embed"></div>
+
+<!-- Load the Twitch embed script -->
+<script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+<!-- Create a Twitch.Player object. This will render within the placeholder div -->
+<script type="text/javascript">
+  new Twitch.Player("twitch-embed", {
+    channel: "sigilw"
+  });
+</script>
+
+<iframe src="https://player.twitch.tv/?channel=sigilw&parent=sigil.tv" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+
+
+<iframe
+  id="chat_embed"
+  src="https://www.twitch.tv/embed/sigilw/chat?parent=sigil.tv"
+  height="500"
+  width="350">
+</iframe>
